[package]
name = "vinox_voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { version = "1.14.0", optional = true }
ron = { version = "0.8.0", optional = true }
serde = "1.0.154"
ndshape = "0.3.0"
serde_with = "2.3.1"
strum = {version="0.24.1", features=["derive"]}
bitvec = {version="1.0.1", features=["alloc","atomic","std","serde"]}
derive_more = "0.99.17"
bincode = "1.3.3"
rand = "0.8.5"
ahash = "0.8.3"
mint = "0.5.9"
glam = {version = "0.24.1", features=["mint"]}

[features]
default = ["geometry", "block", "scripting", "light", "render"]
render = ["geometry", "block", "light"]
geometry = []
light = []
block = ["ron", "geometry"]
scripting = ["block", "rhai"]

[[example]]
name = "chunk"

# dependencies = ["bevy"]
